proper hrefs in submenus

--- a/templates/submenu_info.tmpl
+++ b/templates/submenu_info.tmpl
@@ -4,43 +4,43 @@
 <div id="csssubmenu">
   <ul>
     <li id="menu_info_contacts">
-      <a href=/cgi-bin/info.cgi?rm=info_contacts_form>
+      <a href="/cgi-bin/info.cgi?rm=info_contacts_form">
       Contacts
       </a>
     </li>
 <!--
     <li id="menu_info_documents">
-      <a href=/cgi-bin/info.cgi?rm=info_documents_form>
+      <a href="/cgi-bin/info.cgi?rm=info_documents_form">
       Documents
       </a>
     </li>
 
     <li id="menu_info_reports">
-      <a href=/cgi-bin/info.cgi?rm=info_reports_form>
+      <a href="/cgi-bin/info.cgi?rm=info_reports_form">
       Run reports
       </a>
     </li>
 
     <li id="menu_info_report-folder">
-      <a href=/cgi-bin/info.cgi?rm=info_report-folder_form>
+      <a href="/cgi-bin/info.cgi?rm=info_report-folder_form">
       Report folder
       </a>
     </li>
 -->
     <li id="menu_info_reports">
-      <a href=/cgi-bin/info.cgi?rm=info_new_reports_form>
+      <a href="/cgi-bin/info.cgi?rm=info_new_reports_form">
 	Reports
       </a>
     </li>
 
     <li id="menu_info_average_times">
-      <a href=/cgi-bin/info.cgi?rm=info_average_times_form>
+      <a href="/cgi-bin/info.cgi?rm=info_average_times_form">
 	Average times
       </a>
     </li>
 <!--
     <li id="menu_info_feeds">
-      <a href=/cgi-bin/info.cgi?rm=info_feeds_form>
+      <a href="/cgi-bin/info.cgi?rm=info_feeds_form">
       Feeds
       </a>
     </li>
