--- a/templates/submenu_lend.tmpl
+++ b/templates/submenu_lend.tmpl
@@ -4,37 +4,37 @@
 <div id="csssubmenu">
   <ul>
     <li id="menu_lend_pull">
-      <a href=/cgi-bin/lightning.cgi?rm=pull_list>
+      <a href="/cgi-bin/lightning.cgi?rm=pull_list">
       Pull list
       </a>
     </li>
 
     <li id="menu_lend_respond">
-      <a href=/cgi-bin/lightning.cgi?rm=respond>
+      <a href="/cgi-bin/lightning.cgi?rm=respond">
       Respond
       </a>
     </li>
 
     <li id="menu_lend_holds">
-      <a href=/cgi-bin/lightning.cgi?rm=on_hold>
+      <a href="/cgi-bin/lightning.cgi?rm=on_hold">
       On hold
       </a>
     </li>
 
     <li id="menu_lend_shipping">
-      <a href=/cgi-bin/lightning.cgi?rm=shipping>
+      <a href="/cgi-bin/lightning.cgi?rm=shipping">
       Shipping
       </a>
     </li>
 
     <li id="menu_lend_renewal_requests">
-      <a href=/cgi-bin/lightning.cgi?rm=renew_answer>
+      <a href="/cgi-bin/lightning.cgi?rm=renew_answer">
       Renewal requests
       </a>
     </li>
 
     <li id="menu_lend_checkins">
-      <a href=/cgi-bin/lightning.cgi?rm=checkins>
+      <a href="/cgi-bin/lightning.cgi?rm=checkins">
       Check-ins
       </a>
     </li>
