--- a/templates/submenu_patrons.tmpl
+++ b/templates/submenu_patrons.tmpl
@@ -4,7 +4,7 @@
 <div id="csssubmenu">
   <ul>
     <li id="menu_patrons_list">
-      <a href=/cgi-bin/patrons.cgi?rm=patrons_form>
+      <a href="/cgi-bin/patrons.cgi?rm=patrons_form">
       Patron list
       </a>
     </li>
