--- a/templates/submenu_rotations.tmpl
+++ b/templates/submenu_rotations.tmpl
@@ -4,25 +4,25 @@
 <div id="csssubmenu">
   <ul>
     <li id="menu_rotations_receiving">
-      <a href=/cgi-bin/rotations.cgi?rm=receive_form>
+      <a href="/cgi-bin/rotations.cgi?rm=receive_form">
       Receive titles
       </a>
     </li>
 
     <li id="menu_rotations_circstats">
-      <a href=/cgi-bin/rotations.cgi?rm=circstats_form>
+      <a href="/cgi-bin/rotations.cgi?rm=circstats_form">
       Enter circ stats
       </a>
     </li>
 
     <li id="menu_rotations_current">
-      <a href=/cgi-bin/rotations.cgi?rm=current_form>
+      <a href="/cgi-bin/rotations.cgi?rm=current_form">
       At my library
       </a>
     </li>
 
     <li id="menu_rotations_holdins_setup">
-      <a href=/cgi-bin/rotations.cgi?rm=holdings_setup_form>
+      <a href="/cgi-bin/rotations.cgi?rm=holdings_setup_form">
       Holdings setup
       </a>
     </li>
