--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -51,7 +51,32 @@ $('document').ready(function() {
 <div id="main-right" class="tone-box" role="complimentary">
   <h2>Updates</h2>
   <hr>
-  <strong>Monday 8th December Release notes</strong><span style="color:red;"> (new!)</span>
+  <strong>Monday 19th December 2014 Release notes</strong><span style="color:red;"> (new!)</span>
+ 
+<p>The improvements represented below have been inspired through the collective input received from the library community and some have been integrated from direct feedback. We will continue to refine areas of the site wherever necessary and your ongoing support and advice is very much appreciated. If your library has ideas on how we can improve fILL together, please send your thoughts to <a href="mailto:pls@gov.mb.ca">pls@gov.mb.ca</a></p>
+  
+<h2>Updates and bug fixes</h2>
+<p>The update release notes have been divided into two sections to best articulate the updates and fixes.</p>
+ 
+<h3>Library Side</h3>
+                <li>Added pub date information to both the ‘Respond’ and ‘Unfilled’ tables</li>
+                <li>Canada post tracking number option added to Shipping-returning table; includes link to CP package tracking site (Community Suggestion - Vickie, Lac du Bonnet Regional Library)</li>
+                <li>Added ability to easily perform advanced searches based on limiters; title, author, subject and series</li>
+                <li>Added ability to display the reason a patron request was declined by home library system</li>  
+                <li>New alert message "Check your website to see if you have the correct fILL logo and website address, https://fill.sitka.bclibraries.ca/ '</li>
+                <li>Ability to clear items from the wish list</li>
+                <li>Wish list now includes the patron barcode of title requests originating from your library service area.(Community Suggestion - Mary Toma, South Central Regional Library)</li>
+ 
+<h3>Patron Side</h3>
+                <li>eLM resources in results now link directly to eLM record</li>
+                <li>Placeholder cover images show in search results wherever title images are not available at source</li>
+                <li>Enhanced mobile optimisation; improved viewing on mobile and smaller screens. As an ongoing work in progress, please advise if you are viewing on a particular device with a small screen that requires some adjusting</li>
+                <li>Added fILL notifications for declined requests and those added to wish list, previously patrons were only notified if a ILL request was approved</li> 
+                <li>New featured titles from 2013 Scotia Bank prize shortlist</li>
+                <li>Other minor code tweaks and bug fixes</li>
+ <br>
+  <hr>
+  <strong>Monday 8th December Release notes</strong>
   <p>New functionality: Advanced Search</p>
   <p>Based on feedback from the library community, we've implemented an 'Advanced search' which will help you to build the proper query for title/author/subject/series searches.</p>
   <p>On the Search page ("Borrowing" -> "Search"), click on the 'Advanced' button at the end of the search box.  This will display the advanced fields.  Enter your information and click the 'Search' button; the system will turn your title/author/subject/series phrases into the required format and perform the search.</p>
