styles for new update

--- a/htdocs/css/themes-library-allison.css
+++ b/htdocs/css/themes-library-allison.css
@@ -693,6 +693,10 @@ and (max-width : 65em)
 #instructions {
 }
 
+#community {
+  color: #fff;
+}
+
 /* Circle has been created to highlight alerts */
 
 .circle {
