--- a/htdocs/css/themes-library-colors.css
+++ b/htdocs/css/themes-library-colors.css
@@ -683,6 +683,10 @@ and (max-width : 65em)
 #instructions {
 }
 
+#community {
+  color: #183935;
+}
+
 /* Circle has been created to highlight alerts */
 
 .circle {
