--- a/htdocs/css/themes-library-contrast.css
+++ b/htdocs/css/themes-library-contrast.css
@@ -680,6 +680,10 @@ and (max-width : 65em)
 #instructions {
 }
 
+#community {
+  color: #000;
+}
+
 /* Circle has been created to highlight alerts */
 
 .circle {
