updated community class
originally made a class for all three style themes, decided to just
have one that fits all.

--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -185,6 +185,11 @@ html, body {
   margin:1em;
 }
 
+.community {
+  color: #183935;
+  background-color: #f3f3f3;
+}
+
 /*-- specific to make_request.tmp --*/
 #toptwo {
     width: 100%;
