new alert message

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -63,7 +63,7 @@ $('document').ready(function() {
   <li>Canada post tracking number option added to Shipping-returning table; includes link to CP package tracking site <span class="community">(Community Suggestion - Vickie Short, Lac du Bonnet Regional Library)</span></li>
   <li>Added ability to easily perform advanced searches based on limiters; title, author, subject and series</li>
   <li>Added ability to display the reason a patron request was declined by home library system</li>  
-  <li>New alert message "Check your website to see if you have the correct fILL logo and website address, https://fill.sitka.bclibraries.ca/ '</li>
+  <li>New alert message "You can now add patron requests to your 'wish list'"</li>
   <li>Ability to clear items from the wish list</li>
   <li>Wish list now includes the patron barcode of title requests originating from your library service area.<span class="community">(Community Suggestion - Mary Toma, South Central Regional Library)</span></li>
 </ul>
