removed book from search page

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -82,7 +82,7 @@
 <script type="text/javascript">
   $('document').ready(function(){
 
-    $("#image").append("<img src=/img/fill-search.jpg>");
+    $("#image").append("");
 
     $("#query").focus();
 
