matched library names now links to contact

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -113,7 +113,7 @@ $('document').ready(function(){
        It doesn't have to be *here*, but it has to be somewhere....
     -->
         <div id="username"><TMPL_VAR name="username"></div>
-        <p><TMPL_VAR name="library"></p>
+        <p><a href="/cgi-bin/public.cgi?rm=contact_form"><strong><TMPL_VAR name="library"></strong></a></p>
         <div id="lid" style="display:none"><TMPL_VAR name="lid"></div>
 	<input id="incrFont" class="public-style" type="button" value="+A" /><input id="decrFont" class="public-style" type="button" value="-A" />
     </div>
