--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -137,7 +137,8 @@
          It doesn't have to be *here*, but it has to be somewhere....
       -->
           <div id="username"><TMPL_VAR name="username"></div>
-          <p><strong><TMPL_VAR name="library"></strong></p>
+          <p><a href="/cgi-bin/public.cgi?rm=contact_form"><strong><TMPL_VAR name="library"></strong></a></p>
+
 	  <input id="incrFont" class="public-style" type="button" value="+A" /><input id="decrFont" class="public-style" type="button" value="-A" />
           <div id="lid" style="display:none"><TMPL_VAR name="lid"></div>
       </div>
