--- a/templates/public/logged_out.tmpl
+++ b/templates/public/logged_out.tmpl
@@ -1,5 +1,17 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
+<script type="text/javascript">
+  
+$('document').ready(function(){
+
+    $("#search").hide();
+    $(".inline-items").children().hide();
+    $(".inline-items").children(":contains('home')").show();
+    $("#fill-button").hide();  // hide the logout button, as it makes no sense here
+
+});
+</script>
+
 <div class="clear">
 
 	<div id="content">
