--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -100,6 +100,20 @@
         decreaseFontSize();
     });
 
+    if (! $.cookie("fILL-lid")) {
+        $.cookie("fILL-lid", $("#lid").text(), { expires: 365, path: '/' });
+        //$.cookie("fILL-location", xxx, { expires: 365, path: '/' });
+    }
+
+    $("#clearCookies").on("click",function(e){
+        e.preventDefault();
+        $.removeCookie("fILL-lid", { path: '/' });
+        $.removeCookie("fILL-location", { path: '/' });
+        $.removeCookie("fILL-barcode", { path: '/' });
+        $.removeCookie("fILL-authentication", { path: '/' });
+        window.location.href="?authen_logout=1";
+    });
+
   });
 </script>
 
