--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -1,15 +1,4 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<!--
-    $.cookie("fILL-lid","94");
-    $.cookie("fILL-location","Brandon");
-    $.cookie("fILL-barcode","20967000590071");
-    $.cookie("fILL-authentication","sip2");
-
-    $.removeCookie("fILL-lid", { path: '/cgi-bin/' });
-    $.removeCookie("fILL-location", { path: '/cgi-bin/' });
-    $.removeCookie("fILL-barcode", { path: '/cgi-bin/' });
-    $.removeCookie("fILL-authentication", { path: '/cgi-bin/' });
--->
 
 <script type="text/javascript">
   
@@ -36,24 +25,56 @@ $('document').ready(function(){
             $("#authen_loginfield").val( "using-sip2" );
             $("#authen_passwordfield").val( "using-sip2" );
             $("#authen_pin").focus();
+        } else {
+            $("#authen_barcode").val( "not-using-sip2" );
+            $("#authen_pin").val( "not-using-sip2" );
+            $("#authen_lid").val( homeLibraryLID ); // undef?
+            $("#authen_loginfield").focus();
         }
     } else {
-      $("#authen_barcode").val( "not-using-sip2" );
-      $("#authen_pin").val( "not-using-sip2" );
-      $("#authen_lid").val( homeLibraryLID ); // undef?
-      $("#authen_loginfield").focus();
+        $("#authentication-method").show();
+        $("#sip2").hide();
+        $("#non-sip2").hide();
+        $("#sign-in").hide();
     }
 
-    // this is just so I can use the debugger to see what's being submitted...
-    $('#loginform').on('submit', function(e){
+    $("#loginform").on('submit', function(e){
         e.preventDefault();
-        //alert('form submit!');
+
         var myAlert = "";
         $("#loginform :input").each(function(i){
           var $input = $(this);
           myAlert += $input.attr('name')+':'+$input.val()+'\n';
         });
+//        alert(myAlert);
+
+        if (! $.cookie("fILL-authentication")) {
+            // these cookies don't exist, so create them.
+            if ($("#authen_barcode").val()) {
+                $.cookie("fILL-barcode", $("#authen_barcode").val(), { expires: 365, path: '/' });
+                $.cookie("fILL-authentication", "sip2", { expires: 365, path: '/' });
+                $("#authen_loginfield").val( "using-sip2" );
+                $("#authen_passwordfield").val( "using-sip2" );
+            } else {
+                $.cookie("fILL-authentication", "fILL", { expires: 365, path: '/' });
+                $("#authen_barcode").val( "not-using-sip2" );
+                $("#authen_pin").val( "not-using-sip2" );
+            }
+        }
+
         this.submit();
+    });
+
+    $("#auth-sip2").on("click",function(){
+        $("#sip2").show();
+        $("#non-sip2").hide();
+        $("#sign-in").show();
+    });
+
+    $("#auth-fILL").on("click",function(){
+        $("#sip2").hide();
+        $("#non-sip2").show();
+        $("#sign-in").show();
     });
 
 });
@@ -68,6 +89,12 @@ $('document').ready(function(){
 
       <legend>Patron Login</legend>
 
+      <div id="authentication-method" style="display:none">
+	<p>How do you log in to fILL?</p>
+	<input id="auth-sip2" class="public-style" type="button" value="My library  " /> Use my library card and PIN<br/>
+	<input id="auth-fILL" class="public-style" type="button" value="fILL account" /> Use my fILL username and password<br/>
+      </div>
+
       <div id="home-library" style="display:none">
 	<table>
 	  <tr>
@@ -78,6 +105,7 @@ $('document').ready(function(){
       </div>
 
       <div id="sip2" style="display:none">
+	<p>Log in using your library barcode and PIN</p>
 	<fieldset name="login">
 	  <label for="authen_barcode">Library card number</label>
 	  <input type="text" value="" size="15" name="authen_barcode" tabindex="1" id="authen_barcode"><br>
@@ -87,6 +115,7 @@ $('document').ready(function(){
       </div> <!-- div id sip2 -->
 
       <div id="non-sip2">
+	<p>Log in using your fILL username and password</p>
         <label for="authen_username">User Name</label>
         <input type="text" value="" autocapitalize="off" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
         <label for="authen_password">Password</label>
@@ -95,10 +124,12 @@ $('document').ready(function(){
 
     </fieldset>
 
-    <fieldset>
-      <input type="submit" class="button-left public-style" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
-      <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
-    </fieldset>
+    <div id="sign-in">
+      <fieldset>
+	<input type="submit" class="button-left public-style" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
+	<input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
+      </fieldset>
+    </div>
       
 
     <div class="login-footer">
