--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -20,10 +20,10 @@ $('document').ready(function() {
 
 <div id="zserver">
 <h3>Z Server Status Report</h3>
-  <div id="zstatus">Z Server Present... <div id="zresult"><span class="zyes">Yes &#9775;</span></div></div>
-  <div id="zstatus">Able to Connect... <div id="zresult"><span class="zyes">Yes &#9775;</span></div></div>
-  <div id="zstatus">Able to Search... <div id="zresult"><span class="zyes">Yes &#9775;</span></div></div>
-  <div id="zstatus">Able to Retrieve Record... <div id="zresult"><span class="zno">No&nbsp;&nbsp;&nbsp;&#9760;</span></div></div>
+  <div id="zstatus">Z Server Present... <div id="zresult"><span class="zyes">Yes &#10004;</span></div></div>
+  <div id="zstatus">Able to Connect... <div id="zresult"><span class="zyes">Yes &#10004;</span></div></div>
+  <div id="zstatus">Able to Search... <div id="zresult"><span class="zyes">Yes &#10004;</span></div></div>
+  <div id="zstatus">Able to Retrieve Record... <div id="zresult"><span class="zno">No&nbsp;&nbsp;&nbsp;&#x2717;</span></div></div>
 </div>
 
 	<h2>Quick Links</h2>
