--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -315,7 +315,7 @@ input[type="button"]:hover.small-function-button {
   background-color: #e3e3e3;
   margin: ;
   padding: ;
-  width: 28%;
+  width: ;
 }
 
 #zstatus {
