--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -1,4 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
+<script type="text/javascript" src="/js/login-lost-lid.js"></script>
 
 <script type="text/javascript">
   
@@ -16,26 +17,28 @@ $('document').ready(function(){
         $("#home-library-location").text( homeLibraryLocation );
         $("#home-library").show();
     }
-    if ($.cookie("fILL-authentication")) {
+    if (! $.cookie("fILL-lid")) {
+        $.getJSON('/cgi-bin/get-map-regions.cgi', 
+            function(data){
+              choose_library(data);
+        });
+    } else {
         if ($.cookie("fILL-authentication") === "sip2") {
             $("#sip2").show();
-            $("#non-sip2").hide()
-            $("#authen_barcode").val( patronBarcode );
-            $("#authen_lid").val( homeLibraryLID );
+            $("#non-sip2").hide();
+            $("#authen_barcode").val( $.cookie("fILL-barcode") );
             $("#authen_loginfield").val( "using-sip2" );
             $("#authen_passwordfield").val( "using-sip2" );
             $("#authen_pin").focus();
-        } else {
+	} else {
+            $("#sip2").hide();
+            $("#non-sip2").show();
             $("#authen_barcode").val( "not-using-sip2" );
             $("#authen_pin").val( "not-using-sip2" );
-            $("#authen_lid").val( homeLibraryLID ); // undef?
             $("#authen_loginfield").focus();
-        }
-    } else {
-        $("#authentication-method").show();
-        $("#sip2").hide();
-        $("#non-sip2").hide();
-        $("#sign-in").hide();
+	}
+        $("#authen_lid").val( $.cookie("fILL-lid") );
+        $("#sign-in").show();
     }
 
     $("#loginform").on('submit', function(e){
@@ -46,7 +49,7 @@ $('document').ready(function(){
           var $input = $(this);
           myAlert += $input.attr('name')+':'+$input.val()+'\n';
         });
-//        alert(myAlert);
+        alert(myAlert);
 
         if (! $.cookie("fILL-authentication")) {
             // these cookies don't exist, so create them.
@@ -65,17 +68,17 @@ $('document').ready(function(){
         this.submit();
     });
 
-    $("#auth-sip2").on("click",function(){
-        $("#sip2").show();
-        $("#non-sip2").hide();
-        $("#sign-in").show();
-    });
-
-    $("#auth-fILL").on("click",function(){
-        $("#sip2").hide();
-        $("#non-sip2").show();
-        $("#sign-in").show();
-    });
+//    $("#auth-sip2").on("click",function(){
+//        $("#sip2").show();
+//        $("#non-sip2").hide();
+//        $("#sign-in").show();
+//    });
+//
+//    $("#auth-fILL").on("click",function(){
+//        $("#sip2").hide();
+//        $("#non-sip2").show();
+//        $("#sign-in").show();
+//    });
 
 });
 
@@ -89,11 +92,16 @@ $('document').ready(function(){
 
       <legend>Patron Login</legend>
 
+      <div id="region"></div>
+      <div id="libraries"></div>
+
+<!--
       <div id="authentication-method" style="display:none">
 	<p>How do you log in to fILL?</p>
 	<input id="auth-sip2" class="public-style" type="button" value="My library  " /> Use my library card and PIN<br/>
 	<input id="auth-fILL" class="public-style" type="button" value="fILL account" /> Use my fILL username and password<br/>
       </div>
+-->
 
       <div id="home-library" style="display:none">
 	<table>
@@ -106,6 +114,11 @@ $('document').ready(function(){
 
       <div id="sip2" style="display:none">
 	<p>Log in using your library barcode and PIN</p>
+        <div id="chooseLibrary" style="display:none">
+	  <div id="region">
+	  </div>
+        </div>
+
 	<fieldset name="login">
 	  <label for="authen_barcode">Library card number</label>
 	  <input type="text" value="" size="15" name="authen_barcode" tabindex="1" id="authen_barcode"><br>
@@ -114,7 +127,7 @@ $('document').ready(function(){
         </fieldset>
       </div> <!-- div id sip2 -->
 
-      <div id="non-sip2">
+      <div id="non-sip2" style="display:none">
 	<p>Log in using your fILL username and password</p>
         <label for="authen_username">User Name</label>
         <input type="text" value="" autocapitalize="off" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
@@ -124,7 +137,7 @@ $('document').ready(function(){
 
     </fieldset>
 
-    <div id="sign-in">
+    <div id="sign-in" style="display:none">
       <fieldset>
 	<input type="submit" class="button-left public-style" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
 	<input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
