--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -27,7 +27,8 @@
 <link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/media/css/jquery.dataTables.css">
 <link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/extensions/TableTools/css/dataTables.tableTools.css">
 
-  <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
+  <script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="/js/jquery.cookie.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
   <script type="text/javascript" src="/js/fILL_client-public-1.9.js"></script>
 
