grab jQuery-File-Upload

--- a/templates/submenu_rotations_admin.tmpl
+++ b/templates/submenu_rotations_admin.tmpl
@@ -3,6 +3,12 @@
 <!--div id="submenu"-->
 <div id="csssubmenu">
   <ul>
+    <li id="menu_rotations_admin_upload">
+      <a href="/cgi-bin/rotations_admin.cgi?rm=upload">
+      upload records
+      </a>
+    </li>
+
     <li id="menu_rotations_report_received_counts">
       <a href="/cgi-bin/rotations_admin.cgi?rm=report_received_cnt">
       library received accounts
