--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -269,7 +269,7 @@ $('document').ready(function(){
     <li><a id="menu_myaccount" href="/cgi-bin/myaccount.cgi?rm=myaccount_settings_form">Account</a></li>
     <li><a id="menu_patrons" href="/cgi-bin/patrons.cgi?rm=patrons_form">Patrons</a></li>
     <li><a id="menu_info" href="/cgi-bin/info.cgi?rm=info_contacts_form">Info</a></li>
-    <li><a id="menu_util" href="/cgi-bin/dsc.cgi?rm=dsc_form">Util</a></li>
+<!--    <li><a id="menu_util" href="/cgi-bin/dsc.cgi?rm=dsc_form">Util</a></li> -->
     <li><a id="menu_rotations" style="display:none;" href="/cgi-bin/rotations.cgi?rm=receive_form">*Rotations</a></li>
     <li><a id="menu_rotations_admin" style="display:none;" href="/cgi-bin/rotations_admin.cgi?rm=report_received_cnt">*Admin</a></li>
   </ul>
