tweak to z server look

--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -325,16 +325,18 @@ input[type="button"]:hover.small-function-button {
   font-size: 1em;
   font-style: bold;
   margin: .5em 0em;
+  height: 1.5em;
 }
 
 #zresult {
   width: auto;
   float: right;
+  padding: .5em;
 }
 
 .zyes {
   width: 30%;
-  color: green;
+  color: #000;
   background-color: #adff2f;
   border: 1px solid green;
   padding: .3em;
@@ -343,7 +345,7 @@ input[type="button"]:hover.small-function-button {
 
 .zno {
   width: 30%;
-  color: #660000;
+  color: #000;
   background-color: #ff6262;
   border: 1px solid #660000;
   padding: .3em;
