--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -1,4 +1,46 @@
-<TMPL_INCLUDE NAME="header.tmpl">
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>fILL</title>
+
+  <!--[if lt IE 9]>
+    <script>
+      var e = ("abbr,article,aside,audio,canvas,datalist,details," +
+      "figure,footer,header,main,mark,menu,meter,nav,output," +
+      "progress,section,time,video").split(',');
+      for (var i = 0; i < e.length; i++) {
+   document.createElement(e[i]);
+      }
+    </script>
+  <![endif]-->
+
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
+  <link type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
+  <link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css">
+
+</head>
+
+<body>
+
+<div id="container">
+  <!--***************ARIA MARKER 'BANNER'***************-->
+    <header role="banner">
+
+      
+        <div id="fill-logo"><img src="/img/fill-logo.png" alt="fill"/></div>
+        <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
+     
+
+    </header>
+    
+  <!--***************ARIA MARKER 'NAVIGATION'***************-->
+  <nav role="navigation" id="pub-nav-primary">
+    <ul class="inline-items">
+      <li><a id="menu_search" class="current_tab" href="">Welcome</a></li>
+      <li><a id="menu_new" href="/new.html">New to fILL?</a></li>
+    </ul>
+  </nav>
 
 
 <script type="text/javascript">
@@ -15,6 +57,12 @@ $('document').ready(function(){
 </script>
 <div id="clear"></div>
 
+<div id="aside-img-welcome">
+    <img src='/img/card_catalogue.jpg'/>
+    <p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
+  </div>
+
+<div id="main-info-welcome">
 <div class="login">
 
   <form action="/cgi-bin/public.cgi" method="post" name="loginform" id="loginform">
@@ -46,7 +94,7 @@ $('document').ready(function(){
     <input type="hidden" value="https://localhost/cgi-bin/public.cgi?rm=search_form;submit=Log%20in" name="destination">
     <input type="hidden" value="authen_login" name="rm">
   </form>
-
+</div>
 </div>
 
 <script language="JavaScript" type="text/javascript">
