--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -15,6 +15,12 @@ $('document').ready(function(){
 </script>
 <div id="clear"></div>
 
+<div id="aside-img-welcome">
+    <img src='/img/card_catalogue.jpg'/>
+    <p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
+  </div>
+
+<div id="main-info-welcome">
 <div class="login">
 
   <form action="/cgi-bin/public.cgi" method="post" name="loginform" id="loginform">
@@ -46,7 +52,7 @@ $('document').ready(function(){
     <input type="hidden" value="https://localhost/cgi-bin/public.cgi?rm=search_form;submit=Log%20in" name="destination">
     <input type="hidden" value="authen_login" name="rm">
   </form>
-
+</div>
 </div>
 
 <script language="JavaScript" type="text/javascript">
