--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -4,7 +4,7 @@
 <footer role="contentinfo">
 <div id="nav2">
   
-    <a href="/cgi-bin/lightning.cgi?rm=environment_form">ENV display</a><span style="color:#aabdba;"> | </span><a href="?authen_logout=1">Log out</a>
+    <a href="/cgi-bin/lightning.cgi?rm=environment_form">ENV display</a><span style="color:#aabdba;"> | </span><a href="?authen_logout=1">Log out</a> | <a href="https://mintaka.gotdns.org/cgi-bin/lightning.cgi">Library Staff</a>
 </div>
   <p>
     <!-- The id="username" div is necessary: the username gets extracted (in 
