--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -1,5 +1,12 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-
+ 
+ <!--***************ARIA MARKER 'NAVIGATION'***************-->
+  <nav role="navigation" id="pub-nav-primary">
+    <ul class="inline-items">
+      <li><a id="menu_search" class="current_tab" href="">Welcome</a></li>
+      <li><a id="menu_new" href="/new.html">New to fILL?</a></li>
+    </ul>
+  </nav>
 
 <script type="text/javascript">
   
