--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -73,13 +73,14 @@ $('document').ready(function() {
   </div>
   <hr>
   <div id="zserver">
-    <h3>Z Server Status Report</h3>
+    <a href="https://mintaka.gotdns.org/cgi-bin/myaccount.cgi?rm=myaccount_test_zserver_form"><h3>Z Server Status Check</h3></a>
     <div id="waitDiv">Checking...<img src="/wait.gif"></div>
     <div class="zstatus">Z Server Present <span id="zPresent" class="zno">...</span></div>
     <div class="zstatus">Able to Connect <span id="zConnect" class="zno">...</span></div>
     <div class="zstatus">Able to Search <span id="zSearch" class="zno">...</span></div>
     <div class="zstatus">Able to Retrieve Record <span id="zRecord" class="zno">...</span></div>
   </div>
+  <p>If any Z Server check indicates 'No &#x2717;' please notify your ILS admistrator and email <a href="mailto:pls@gov.mb.ca">pls@gov.mb.ca</a>
   <hr>
 
   <h2>Quick Links</h2>
